--- a/cyberpfunkvcard.html
+++ b/cyberpfunkvcard.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cyberpfunk - vCard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            padding: 20px;
+        }
+        .vcard {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            margin: 0 auto;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        p {
+            margin: 5px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #007bff;
+        }
+    </style>
+</head>
+<body>
+    <div class="vcard">
+        <h1>Cyberpfunk DJ and MC with 8o8 Live</h1>
+        <p>Events, DJ Sessions, Parties</p>
+        <p>Boat Party, Soundscapes, Partnership</p>
+        <p><strong>Instagram:</strong> <a href="https://www.instagram.com/CyberPFunk" target="_blank">@CyberPFunk</a></p>
+        <p><strong>TikTok:</strong> <a href="https://www.tiktok.com/@cyberpfunk8o8" target="_blank">TikTok Link</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lucasallen/" target="_blank">LinkedIn Profile</a></p>
+        <p><strong>Email:</strong> lucas@8o8.live</p>
+        <p><strong>Mobile:</strong> +34 645 865 392</p>
+    </div>
+</body>
+</html>
 
