--- a/cyberpfunkvcard.html
+++ b/cyberpfunkvcard.html
@@ -6,7 +6,7 @@
     <title>Cyberpfunk - vCard</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Ubuntu, sans-serif;
             background-color: #f0f0f0;
             padding: 20px;
         }
@@ -33,13 +33,13 @@
 </head>
 <body>
     <div class="vcard">
-        <h1>Cyberpfunk DJ and MC with 8o8 Live</h1>
-        <p>Events, DJ Sessions, Parties</p>
-        <p>Boat Party, Soundscapes, Partnership</p>
+        <h1>LN2X & 8o8 Enquiries</h1>
+        <p>Consulting, Training, Events</p>
+	<p><strong>Website:</strong> <a href="https://ln2x.io" target="_blank">ln2x.io</a></p>
         <p><strong>Instagram:</strong> <a href="https://www.instagram.com/CyberPFunk" target="_blank">@CyberPFunk</a></p>
-        <p><strong>TikTok:</strong> <a href="https://www.tiktok.com/@cyberpfunk8o8" target="_blank">TikTok Link</a></p>
-        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lucasallen/" target="_blank">LinkedIn Profile</a></p>
-        <p><strong>Email:</strong> lucas@8o8.live</p>
+        <p><strong>TikTok:</strong> <a href="https://www.tiktok.com/@cyberpfunk8o8" target="_blank">@cyberpfunk8o8</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lucasallen/" target="_blank">lucasallen</a></p>
+        <p><strong>Email:</strong> lallen[at]ln2x[dot]io</p>
         <p><strong>Mobile:</strong> +34 645 865 392</p>
     </div>
 </body>
