--- a/cyberpfunkvcard.html
+++ b/cyberpfunkvcard.html
@@ -42,6 +42,12 @@
         <p><strong>Email:</strong> lallen[at]ln2x[dot]io</p>
         <p><strong>Mobile:</strong> +34 645 865 392</p>
     </div>
+	<div class="vcard">
+	<h1>Scan for VCard</h1>
+        <img src="04996914-4146-4af4-a980-186bb7ab5af1.png" alt="vCard" width="250">
+    	</div>
+
+
 </body>
 </html>
 
