Updated Card with Button

--- a/cyberpfunkvcard.html
+++ b/cyberpfunkvcard.html
@@ -40,7 +40,9 @@
         <p><strong>TikTok:</strong> <a href="https://www.tiktok.com/@cyberpfunk8o8" target="_blank">@cyberpfunk8o8</a></p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lucasallen/" target="_blank">lucasallen</a></p>
         <p><strong>Email:</strong> lallen[at]ln2x[dot]io</p>
-        <p><strong>Mobile:</strong> +34 645 865 392</p>
+        <a href="04996914-4146-4af4-a980-186bb7ab5af1.vcf" download="04996914-4146-4af4-a980-186bb7ab5af1.vcf">
+            <button>Download vCard</button>
+        </a>
     </div>
 	<div class="vcard">
 	<h1>Scan for VCard</h1>
